<resources>
    <string name="app_name">SerraAlertas</string>
    <string name="act2_name">Configuración</string>
    <string name="action_info">Info</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Edit_button">edit_button</string>
    <string name="edit_image">edit_image</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_add">Add</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="instruccionesConfig">Rellene los siguientes campos para configurar su botón:</string>
    <string name="instruccionTitulo">Escriba el título del botón:</string>
    <string name="instruccionFoto">Pulse para seleccionar la imagen:</string>
    <string name="instruccionAudio">Pulse para seleccionar el audio:</string>
    <string name="noAudio">Sin audio seleccionado</string>
    <string name="seleccionBoton">Seleccione un color:</string>
    <string name="noBoton">Sin boton seleccionado</string>
    <string name="back">back</string>
    <string name="botonAudio">SELECCIÓN DE AUDIO</string>
    <string name="OpcionesAvanzadas">OPCIONES AVANZADAS</string>
    <string name="recuerde">¡Recuerde! Pulse el botón superior derecho para guardar su botón.</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="t_tulo">Título...</string>
    <string name="todo">TODO</string>
    <string name="default_alarma">Duración de alarma: (Default 10)</string>
    <string name="defaultAudio">Duración del audio: (Default 10)</string>
    <string name="title_activity_show_bluetooth">ShowBluetooth</string>
    <string name="titulo">Título</string>
    <string name="color">Color</string>
    <string name="bAceptar">ACEPTAR</string>
    <string name="image">image</string>
    <string name="edit">edit</string>
    <string name="background">Apagar segundo plano</string>
</resources>