<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bAvanzadas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/instruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="68dp"
        android:text="@string/instruccionesConfig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addImagen"
        android:layout_width="124dp"
        android:layout_height="112dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="152dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/resultadoAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="296dp"
        android:text="@string/noAudio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bAudio"
        android:layout_width="126dp"
        android:layout_height="61dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="268dp"
        android:text="@string/botonAudio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterTitulo"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="Título..."
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sBoton"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="212dp"
        android:prompt="@string/seleccionBoton"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultadoBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="332dp"
        android:text="@string/noBoton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bAvanzado"
        android:layout_width="126dp"
        android:layout_height="61dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="332dp"
        android:text="@string/OpcionesAvanzadas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tiempoPantalla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="408dp"
        android:ems="10"
        android:hint="Duración del audio:"
        android:inputType="number"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tiempoAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="460dp"
        android:ems="10"
        android:hint="Duración de alarma:"
        android:inputType="number"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>